hsmc-macros/tests/ui/t9_5_default_childless.stderr
error: `default` in state `Leaf` which has no child states
  --> tests/ui/t9_5_default_childless.rs:14:9
   |
14 |         default(Ghost);
   |         ^^^^^^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_5_default_childless.rs:20:6
   |
20 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_5_default_childless.rs:20:19
   |
20 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope
